--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "js-sha256": "^0.11.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
